# synapse

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml  mcp_servers.example.json
.cargo/: audit.toml
.claude/: settings.json  settings.local.json
.claude/agents/: analyst.md  code-writer.md  planner.md  qa.md  researcher.md  reviewer.md  task-planner.md  tech-writer.md  test-writer.md
.claude/commands/: analysis.md  commit.md  feature-development.md  idea.md  implement-orchestrated.md  plan.md  planner.md  research.md  researcher.md  run-reviewer.md  sync-phases.md  tasks.md
.claude/rules/: ast-index.md
.claude/skills/analysis/: SKILL.md  analyst.md
.claude/skills/dev-cycle/: SKILL.md
.claude/skills/docs-update/: SKILL.md
.claude/skills/feature-development/: SKILL.md
.claude/skills/implement-orchestrated/: SKILL.md  code-writer.md  test-writer.md
.claude/skills/phase-loop/: SKILL.md
.claude/skills/plan/: SKILL.md  planner.md
.claude/skills/qa/: SKILL.md
.claude/skills/quick-implement/: SKILL.md  coder.md  reviewer.md
.claude/skills/release/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/run-reviewer/: SKILL.md
.claude/skills/rust-refactor-helper/: SKILL.md
.claude/skills/sync-phases/: SKILL.md
.claude/skills/tasklist/: SKILL.md
.claude/skills/validate/: SKILL.md  validator.md
.github/workflows/: ci.yml
doc/: .active_ticket  conventions.md  vision.md  workflow.md
doc/prd/: SY-1.prd.md
doc/research/: SY-1.md
docs/: .active_ticket  add-ci-cd.md  conventions.md  deploy.md  idea.md  phase-1.md  phase-2.md  prd.template.md  relocate-synapse.md  tasklist.example.md  tasklist.md  vision.md  workflow.md
docs/phase/: phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-17.md  phase-18.md  phase-19.md  phase-20.md  phase-21.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
docs/plan/: SY-1.md  SY-10.md  SY-11.md  SY-12.md  SY-13.md  SY-14.md  SY-15.md  SY-16.md  SY-17.md  SY-18.md  SY-19.md  SY-2.md  SY-20.md  SY-21.md  SY-3.md  SY-4.md  SY-5.md  SY-6.md  SY-7.md  SY-8.md  SY-9.md
docs/prd/: SY-1.prd.md  SY-10.prd.md  SY-11.prd.md  SY-12.prd.md  SY-13.prd.md  SY-14.prd.md  SY-15.prd.md  SY-16.prd.md  SY-17.prd.md  SY-18.prd.md  SY-19.prd.md  SY-2.prd.md  SY-20.prd.md  SY-21.prd.md  SY-3.prd.md  SY-4.prd.md  SY-5.prd.md  SY-6.prd.md  SY-7.prd.md  SY-8.prd.md  SY-9.prd.md
docs/releases/: SY-1.md
docs/reports/qa/: SY-1.md
docs/research/: SY-1.md  SY-10.md  SY-11.md  SY-12.md  SY-13.md  SY-14.md  SY-15.md  SY-16.md  SY-17.md  SY-18.md  SY-19.md  SY-2.md  SY-20.md  SY-21.md  SY-3.md  SY-4.md  SY-5.md  SY-6.md  SY-7.md  SY-8.md  SY-9.md
docs/summaries/: SY-1-summary.md
docs/summary/: SY-10-summary.md  SY-11-summary.md  SY-12-summary.md  SY-13-summary.md  SY-14.md  SY-15.md  SY-16.md  SY-17.md  SY-18.md  SY-19.md  SY-2-summary.md  SY-20-summary.md  SY-21.md  SY-3-summary.md  SY-4-summary.md  SY-5-summary.md  SY-6-summary.md  SY-7-summary.md  SY-8-summary.md  SY-9-summary.md
docs/tasklist/: SY-1.md  SY-10.md  SY-11.md  SY-12.md  SY-13.md  SY-14.md  SY-15.md  SY-16.md  SY-17.md  SY-18.md  SY-19.md  SY-2.md  SY-20.md  SY-21.md  SY-3.md  SY-4.md  SY-5.md  SY-6.md  SY-7.md  SY-8.md  SY-9.md
reports/qa/: SY-10.md  SY-11.md  SY-12.md  SY-13.md  SY-14.md  SY-15.md  SY-16.md  SY-17.md  SY-18.md  SY-19.md  SY-2.md  SY-20.md  SY-21.md  SY-3.md  SY-4.md  SY-5.md  SY-6.md  SY-7.md  SY-8.md  SY-9.md
synapse-cli/: Cargo.toml
synapse-cli/src/: commands.rs  main.rs  repl.rs  session.rs
synapse-cli/src/repl/: app.rs  input.rs  render.rs
synapse-core/: Cargo.toml
synapse-core/migrations/: 20250125_001_initial.sql  20260208_002_add_tool_columns.sql  20260226_003_drop_system_prompt.sql
synapse-core/src/: agent.rs  config.rs  lib.rs  mcp.rs  message.rs  provider.rs  session.rs  storage.rs  text.rs
synapse-core/src/config/: tests.rs
synapse-core/src/mcp/: protocol.rs  tools.rs
synapse-core/src/provider/: anthropic.rs  deepseek.rs  factory.rs  mock.rs  openai.rs  openai_compat.rs  streaming.rs
synapse-core/src/provider/anthropic/: types.rs
synapse-core/src/provider/openai_compat/: tests.rs  types.rs
synapse-core/src/storage/: sqlite.rs
synapse-core/src/storage/sqlite/: tests.rs
synapse-telegram/: Cargo.toml
synapse-telegram/src/: commands.rs  format.rs  handlers.rs  main.rs  startup.rs
synapse-telegram/src/commands/: keyboard.rs  tests.rs
synapse-telegram/src/format/: chunk.rs
synapse-telegram/src/startup/: tests.rs
