[package]
name = "synapse-cli"
version = "0.1.0"
edition.workspace = true
description = "Synapse CLI - AI agent command-line interface"

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5.54", features = ["derive"] }
synapse-core = { path = "../synapse-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
