[package]
name = "synapse-cli"
version = "0.1.0"
edition.workspace = true
description = "Synapse CLI - AI agent command-line interface"

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.5.54", features = ["derive"] }
synapse-core = { path = "../synapse-core" }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
    "signal",
] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
