[package]
name = "synapse-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = "0.1"
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
toml = "0.9.8"

# Streaming dependencies
async-stream = "0.3"
eventsource-stream = "0.2"
futures = "0.3"
