[package]
name = "synapse-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
toml = "0.9.8"
uuid = { version = "1", features = ["v4", "serde"] }

# Streaming dependencies
async-stream = "0.3"
eventsource-stream = "0.2"
futures = "0.3"
