[package]
name = "synapse-telegram"
version.workspace = true
edition.workspace = true

[[bin]]
name = "synapse-telegram"
path = "src/main.rs"

[dependencies]
synapse-core = { path = "../synapse-core" }
clap = { version = "4.5.54", features = ["derive"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
async-trait = "0.1"
pulldown-cmark = { version = "0.13", default-features = false }
chrono = "0.4"
